Fix issue with disappearing forms on Safari.

--- a/packages/admin/src/styles/_scroll.sass
+++ b/packages/admin/src/styles/_scroll.sass
@@ -1,5 +1,4 @@
 .dito-scroll
-  height: 100%
   overflow-y: scroll
 
 .dito-content
